# atool

./: .gitmodules  LICENSE  README.md  angular.json  package-lock.json  package.json
.github/workflows/: publish.yml
src/: index.html  styles.css  theme.less
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: audio_to_text.rs  main.rs  password_generator.rs  test_ffmpeg.rs  video_factory.rs  whisper.rs
src-tauri/src/whisper/: input.rs  mod.rs
src/app/: app.component.html  app.component.ts  app.config.ts
src/app/pwd-generator/: pwd-generator.component.css  pwd-generator.component.html  pwd-generator.component.spec.ts  pwd-generator.component.ts
src/app/video-convert/: video-convert.component.html  video-convert.component.spec.ts  video-convert.component.ts
src/app/whisper/: whisper.component.css  whisper.component.html  whisper.component.spec.ts  whisper.component.ts
