[package]
name = "atool"
version = "0.0.1"
description = "Atool"
authors = ["dashuai009@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
pkg-config = "0.3"

[dependencies]
tauri = { version = "1.5", features = [ "protocol-all", "dialog-all", "fs-all", "clipboard-write-text", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = {version = "2.4.2", features = ["serde"] }
rand = "0.8.5"
ffmpeg-next = { version = "6.1.1", features = ["build", "build-license-gpl", "build-license-nonfree", "build-lib-x264", "build-lib-x265",  "build-lib-vpx"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
