[package]
name = "atool"
version = "0.0.4"
description = "Atool"
authors = ["dashuai009@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "protocol-asset", "fs-all", "dialog-open", "clipboard-write-text", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = {version = "2.4.2", features = ["serde"] }
rand = "0.8.5"
whisper = {version = "0.1.0", path = "./whisper-burn"}
burn-import = {  version = "0.13" }
burn = {  version = "0.13"}
burn-wgpu = {  version = "0.13"}
hf-hub = { version = "0.3.2", path = "./whisper-burn/hf-hub" }

[target.'cfg(windows)'.dependencies]
ffmpeg-next = { version = "7.0.1" }

[target.'cfg(not(windows))'.dependencies]
ffmpeg-next = { version = "7.0.1", default-features = false, features = [
    "format", "software-resampling",
    "build",
    "build-license-gpl", "build-license-nonfree", "build-license-version3"
] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
